Patch: fix scrollbar style

--- a/projects/sparkle-ui/styles/core/core/layout.scss
+++ b/projects/sparkle-ui/styles/core/core/layout.scss
@@ -24,6 +24,29 @@ body {
   }
 }
 
+*::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #acacac;
+  background: light-dark(#acacac, #4f4f4f);
+  border-radius: 20px;
+  border: 4px solid transparent;
+  border-left-width: 2px;
+  border-right-width: 3px;
+  background-clip: content-box;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #888888;
+}
+
 .spacer {
   flex: 1 0;
 }
